Use privileged lookup if possible Fix jopt help messages Add module-info to our built jar